--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,37 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+
+name: Pruebas Unitarias
 
 on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+      - name: Revisar Repositorio
+        uses: actions/checkout@v2
+
+      - name: Ejecutar Pruebas Unitarias
+        
+          echo "Verificando enlaces ..."
+          link-checker index.html
+          
+          echo "Validación de HTML..."
+          html-validate index.html
+          
+          echo "Ejecución de pruebas de rendimiento..."
+          lighthouse index.html
+
+          
+          echo "Ejecución de pruebas de accesibilidad..."
+          axe index.html
+
+    -name: Configurando Node
+    uses: actions/septup-node@v2
+      
+
+
+
