--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,3 @@
-
 name: Pruebas Unitarias
 
 on:
@@ -15,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Ejecutar Pruebas Unitarias
-        
+        run: |
           echo "Verificando enlaces ..."
           link-checker index.html
           
@@ -29,9 +28,5 @@ jobs:
           echo "Ejecución de pruebas de accesibilidad..."
           axe index.html
 
-    -name: Configurando Node
-    uses: actions/septup-node@v2
-      
-
-
-
+      - name: Configurando Node
+        uses: actions/setup-node@v2
