--- a/workflows/pruebas-unitarias.yml
+++ b/workflows/pruebas-unitarias.yml
@@ -6,15 +6,20 @@ on:
       - main
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Revisar Repositorio
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Instalar dependencias
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Install dependencies
         run: npm install
 
-      - name: Ejecutar Pruebas Unitarias
+      - name: Run unit tests
         run: npm test
