--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,5 +24,13 @@ jobs:
       - name: Ejecutar pruebas unitarias
         run: npm test
 
+       # Agregar notificación en caso de que las pruebas fallen
+      - name: Notificaciones en caso de fallo
+        uses: actions-ecosystem/action-slack@v3
+        with:
+          status: failure
+          env:
+            SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
       - name: Establecer criterios de éxito
         run: npm test APP.test.js
