--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0"
+    "@testing-library/react": "^14.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.8",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
   }
 }
