--- a/package.json
+++ b/package.json
@@ -38,12 +38,19 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "@testing-library/react": "^14.0.0",
+    "babel-loader": "^9.1.2",
     "eslint": "^8.42.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
   }
 }
