--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,10 @@
-version: 0.1
+version: 0.2
 
 phases:
+  pre_build:
+    commands:
+      - apt-get update
+      - apt-get install -y bash
   build:
     commands:
       - npm install
