--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,11 @@
 version: 0.2
 
 phases:
+  pre_build:
+    commands:
+      - echo "Installing Bash"
+      - apt-get update && apt-get install -y bash
+
   build:
     commands:
       - npm install
