--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,23 @@
 version: 0.2
 
 phases:
-  pre_build:
-    commands:
-      - apk update
-      - apk add bash
-  build:
+  install:
+    runtime-versions:
+      nodejs: 18
     commands:
       - npm install
-      - npm run build
+      - npm install -g aws-cli
+
+  pre_build:
+    commands:
+      - npm run lint
+      - npm run test
+
+  build:
+    commands:
+      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/f0v1c6e0
+      - docker build -t radionet-app .
+      - docker tag radionet-app:latest public.ecr.aws/f0v1c6e0/radionet-app:latest
+      docker push public.ecr.aws/f0v1c6e0/radionet-app:latest
+
+ 
