--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,6 @@ phases:
       - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/f0v1c6e0
       - docker build -t radionet-app .
       - docker tag radionet-app:latest public.ecr.aws/f0v1c6e0/radionet-app:latest
-      docker push public.ecr.aws/f0v1c6e0/radionet-app:latest
+      - docker push public.ecr.aws/f0v1c6e0/radionet-app:latest
 
  
