--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,23 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      nodejs: 14
+
   pre_build:
     commands:
       - apk update
       - apk add npm
       - npm install
-      - npm install -g aws-cli
 
   build:
     commands:
-      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/f0v1c6e0
-      - docker build -t radionet-app .
-      - docker tag radionet-app:latest public.ecr.aws/f0v1c6e0/radionet-app:latest
-      - docker push public.ecr.aws/f0v1c6e0/radionet-app:latest
+      - apk add --no-cache bash
+      - source ~/.bashrc
+      - npm run build
 
- 
+  post_build:
+    commands:
+      - npm test
+      - echo "Completado correctamente"
