--- a/src/despliegue.yaml
+++ b/src/despliegue.yaml
@@ -7,7 +7,7 @@ Resources:
   MyECRRepository:
     Type: AWS::ECR::Repository
     Properties:
-      RepositoryName: radio
+      RepositoryName: radionet-app
   
   MyLambdaFunction:
     Type: AWS::Serverless::Function
