--- a/src/sam.yaml
+++ b/src/sam.yaml
@@ -1,22 +1,29 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Despliegue de la aplicacion React JS en AWS
+Description: Despliegue de la aplicacion Radionet React JS en AWS.
 Transform: AWS::Serverless-2016-10-31
 Resources:
-  MyECRRepository:
+  radionetApp:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: radionet-app
     Metadata:
-      SamResourceId: MyECRRepository
-  MyLambdaFunction:
+      SamResourceId: radionetApp
+  funcionLambda:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: s3://radionet-bucket/lambda.js.zip
       Handler: lambda.handler
       Runtime: nodejs18.x
     Metadata:
-      SamResourceId: MyLambdaFunction
+      SamResourceId: funcionLambda
 Outputs:
-  LambdaFunctionName:
-    Value: arn:aws:iam::986278585322:role/cloudFormation
-    Description: "nombre de la funci\xF3n lambda"
+  LambdaFunction:
+    Value:
+      Fn::GetAtt:
+      - funcionLambda
+      - Arn
+    Description: ARN de la Funcion lambda
+  ECRRepositoryName:
+    Value:
+      Ref: radionetApp
+    Description: Nombre del repositorio de ECR.
