--- a/src/despliegue.yaml
+++ b/src/despliegue.yaml
@@ -18,7 +18,7 @@ Resources:
 Outputs:
   LambdaFunction:
     Value: !GetAtt funcionLambda.Arn
-    Description: ARN de la Funcion lambda
+    Description: ARN de la Funcion lambda.
 
   ECRRepositoryName:
     Value: !Ref radionetApp
